added README with dev env setup info

--- a/settings.py.sample
+++ b/settings.py.sample
@@ -96,6 +96,7 @@ INSTALLED_APPS = (
     'django.contrib.admin',
     'django.contrib.admindocs',
     'bashoneliners.main',
+    'bashoneliners.accounts',
 )
 
 
