--- a/settings.py.sample
+++ b/settings.py.sample
@@ -78,6 +78,17 @@ MIDDLEWARE_CLASSES = (
     'django.contrib.messages.middleware.MessageMiddleware',
 )
 
+AUTHENTICATION_BACKENDS = (
+	'django_openid_auth.auth.OpenIDBackend',
+	'django.contrib.auth.backends.ModelBackend',
+	)
+
+OPENID_CREATE_USERS = True
+OPENID_UPDATE_DETAILS_FROM_SREG = True
+
+LOGIN_URL = '/openid/login/'
+LOGIN_REDIRECT_URL = '/accounts/profile'
+
 ROOT_URLCONF = 'bashoneliners.urls'
 
 TEMPLATE_DIRS = (
@@ -97,6 +108,7 @@ INSTALLED_APPS = (
     'django.contrib.admindocs',
     'bashoneliners.main',
     'bashoneliners.accounts',
+    'bashoneliners.django_openid_auth',
 )
 
 
