--- a/settings.py.sample
+++ b/settings.py.sample
@@ -115,6 +115,12 @@ INSTALLED_APPS = (
 
 ''' project specific custom settings '''
 
+TWITTER = {
+        'consumer_key': None,
+        'consumer_secret': None,
+        'access_token': None,
+        'access_token_secret': None,
+        }
 
 
 # eof
