added settings.USE_DJANGO_STATIC_SERVE_FOR_MEDIA to use instead of DEBUG to determine whether to have Django serve static files or not, typically in a development environment

--- a/settings.py.sample
+++ b/settings.py.sample
@@ -112,6 +112,8 @@ INSTALLED_APPS = (
     'bashoneliners.django_openid_auth',
 )
 
+USE_DJANGO_STATIC_SERVE_FOR_MEDIA = False
+
 
 ''' project specific custom settings '''
 
