--- a/settings.py.sample
+++ b/settings.py.sample
@@ -97,7 +97,7 @@ TEMPLATE_DIRS = (
     # Put strings here, like "/home/html/django_templates" or "C:/www/django/templates".
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
-    'templates',
+    os.path.join(DIRNAME, 'templates'),
 )
 
 INSTALLED_APPS = (
