use markdown instead of homebrew nst for formatting explanation and limitations texts

--- a/settings.py.sample
+++ b/settings.py.sample
@@ -108,6 +108,7 @@ INSTALLED_APPS = (
     'django.contrib.messages',
     'django.contrib.admin',
     'django.contrib.admindocs',
+    'django.contrib.markup',
     'bashoneliners.main',
     'bashoneliners.django_openid_auth',
 )
