--- a/settings.py.sample
+++ b/settings.py.sample
@@ -7,7 +7,7 @@ DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 
 ADMINS = (
-    # ('Your Name', 'your_email@domain.com'),
+    ('Your Name', 'your_email@domain.com'),
 )
 
 MANAGERS = ADMINS
@@ -117,7 +117,7 @@ INSTALLED_APPS = (
 USE_DJANGO_STATIC_SERVE_FOR_MEDIA = False
 
 
-''' project specific custom settings '''
+### project specific custom settings
 
 TWITTER = {
         'consumer_key': None,
@@ -125,6 +125,15 @@ TWITTER = {
         'access_token': None,
         'access_token_secret': None,
         }
+
+### emails
+#
+#EMAIL_BACKEND = 'django.core.mail.backends.filebased.EmailBackend'
+#EMAIL_FILE_PATH = '/tmp/django-emails'
+#EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
+
+#import sys
+#sys.path.append('/Library/Python/2.6/site-packages/Markdown-2.0.3-py2.6.egg')
 
 
 # eof
