maybe now login page is really valid html5

--- a/settings.py.sample
+++ b/settings.py.sample
@@ -7,7 +7,7 @@ DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 
 ADMINS = (
-    ('Your Name', 'your_email@domain.com'),
+    ('Bash One-Liners DEV', 'info@bashoneliners.com'),
 )
 
 MANAGERS = ADMINS
