added CustomFileEmailBackend because the alternative debugging backends by django are slow on a home pc without a mail server because of the message.message() call

--- a/settings.py.sample
+++ b/settings.py.sample
@@ -142,7 +142,9 @@ TWITTER = {
 #
 #EMAIL_BACKEND = 'django.core.mail.backends.filebased.EmailBackend'
 #EMAIL_FILE_PATH = '/tmp/django-emails'
-EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
+#EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
+EMAIL_FILE_PATH = '/tmp/django-emails.log'
+EMAIL_BACKEND = 'bashoneliners.main.email.CustomFileEmailBackend'
 
 ### url shortening
 #
