--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Install required python packages using pip:
-# pip install -r pip.txt
+# pip install -r requirements.txt
 Django==1.3.1
 Markdown
 django-openid-auth
