--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Install required python packages using pip:
 # pip install -r requirements.txt
 Django==1.3.1
-Markdown
-django-openid-auth
-pep8
-pyflakes
-python-openid
-tweepy
+Markdown==2.3.1
+django-openid-auth==0.5
+pep8==1.4.5
+pyflakes==0.7.2
+python-openid==2.2.5
+tweepy==2.0
