--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 # Install required python packages using pip:
 # pip install -r requirements.txt
 Django==1.5.1
-Markdown==2.3.1
+Markdown==2.5.1
 django-openid-auth==0.5
 pep8==1.4.5
 pyflakes==0.7.2
 python-openid==2.2.5
-tweepy==2.0
 pytz==2013b
+tweepy==2.0
+wsgiref==0.1.2
