--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,16 @@
 Django==1.5.1
 Markdown==2.6.5
 django-openid-auth==0.5
-pep8==1.5.7
-pyflakes==0.8.1
+django-social-auth==0.7.28
+httplib2==0.9
+oauth2==1.5.211
+oauthlib==1.0.3
+pep8==1.6.2
+pyflakes==1.0.0
 python-openid==2.2.5
-pytz==2014.9
-tweepy==2.3.0
+pytz==2015.7
+requests==2.8.1
+requests-oauthlib==0.5.0
+six==1.10.0
+tweepy==3.5.0
 wsgiref==0.1.2
