--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,13 @@
 Django==1.9
 Markdown==2.6.5
 PyJWT==1.4.0
-South==1.0.2
-django-openid-auth==0.7
-httplib2==0.9
-oauth2==1.5.211
+defusedxml==0.4.1
 oauthlib==1.0.3
 pep8==1.6.2
 pyflakes==1.0.0
-python-openid==2.2.5
 python-social-auth==0.2.13
-pytz==2015.7
-requests==2.8.1
-requests-oauthlib==0.5.0
+python3-openid==3.0.9
+requests==2.9.1
+requests-oauthlib==0.6.0
 six==1.10.0
 tweepy==3.5.0
-wsgiref==0.1.2
