--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 # Install required python packages using pip:
 # pip install -r requirements.txt
-Django==1.9
-Markdown==2.6.5
-PyJWT==1.4.0
-defusedxml==0.4.1
-oauthlib==1.0.3
-pep8==1.6.2
-pyflakes==1.0.0
-python-social-auth==0.2.13
-python3-openid==3.0.9
-requests==2.9.1
-requests-oauthlib==0.6.0
+appdirs==1.4.3
+defusedxml==0.5.0
+Django==1.11.1
+Markdown==2.6.8
+oauthlib==2.0.2
+packaging==16.8
+pep8==1.7.0
+pyflakes==1.5.0
+PyJWT==1.5.0
+pyparsing==2.2.0
+python3-openid==3.1.0
+pytz==2017.2
+requests==2.14.2
+requests-oauthlib==0.8.0
 six==1.10.0
+social-auth-app-django==1.2.0
+social-auth-core==1.3.0
 tweepy==3.5.0
