--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@
 # pip install -r requirements.txt
 appdirs==1.4.3
 certifi==2021.10.8
+cffi==1.15.0
 chardet==3.0.4
+cryptography==36.0.1
 defusedxml==0.6.0
 Django==1.11.20
 idna==2.7
@@ -10,6 +12,7 @@ Markdown==2.6.8
 oauthlib==2.0.2
 packaging==16.8
 pep8==1.7.0
+pycparser==2.21
 pyflakes==1.5.0
 PyJWT==1.5.0
 pyparsing==2.2.0
@@ -20,6 +23,7 @@ requests==2.20.0
 requests-oauthlib==0.8.0
 six==1.10.0
 social-auth-app-django==3.1.0
-social-auth-core==3.0.0
+social-auth-core==3.3.0
 tweepy==3.7.0
+Unidecode==1.3.2
 urllib3==1.24.3
