Upgrade tweepy dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,13 @@ appdirs==1.4.3
 certifi==2021.10.8
 cffi==1.15.0
 chardet==3.0.4
+charset-normalizer==3.2.0
 cryptography==36.0.1
 defusedxml==0.6.0
 Django==1.11.20
 idna==2.7
 Markdown==2.6.8
-oauthlib==2.0.2
+oauthlib==3.2.2
 packaging==16.8
 pep8==1.7.0
 pycparser==2.21
@@ -19,11 +20,11 @@ pyparsing==2.2.0
 PySocks==1.6.8
 python3-openid==3.1.0
 pytz==2017.2
-requests==2.20.0
-requests-oauthlib==0.8.0
+requests==2.31.0
+requests-oauthlib==1.3.1
 six==1.10.0
 social-auth-app-django==3.1.0
 social-auth-core==3.3.0
-tweepy==3.7.0
+tweepy==4.14.0
 Unidecode==1.3.2
 urllib3==1.24.3
