--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ cryptography==36.0.1
 defusedxml==0.6.0
 Django==1.11.20
 idna==2.7
-Markdown==2.6.8
+importlib-metadata==6.8.0
+Markdown==3.4.4
 oauthlib==3.2.2
 packaging==16.8
 pep8==1.7.0
@@ -28,3 +29,4 @@ social-auth-core==3.3.0
 tweepy==4.14.0
 Unidecode==1.3.2
 urllib3==1.24.3
+zipp==3.16.2
