Upgrade to Django 4.2.4, and all other dependencies too

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,36 @@
 # Install required python packages using pip:
 # pip install -r requirements.txt
-appdirs==1.4.3
-certifi==2021.10.8
-cffi==1.15.0
-chardet==3.0.4
+appdirs==1.4.4
+asgiref==3.7.2
+backports.zoneinfo==0.2.1
+certifi==2023.7.22
+cffi==1.15.1
+chardet==5.2.0
 charset-normalizer==3.2.0
-cryptography==36.0.1
-defusedxml==0.6.0
-Django==1.11.20
-idna==2.7
+cryptography==41.0.3
+defusedxml==0.7.1
+Django==4.2.4
+idna==3.4
 importlib-metadata==6.8.0
 Markdown==3.4.4
 oauthlib==3.2.2
-packaging==16.8
-pep8==1.7.0
+packaging==23.1
+pep8==1.7.1
 pycparser==2.21
-pyflakes==1.5.0
-PyJWT==1.5.0
-pyparsing==2.2.0
-PySocks==1.6.8
-python3-openid==3.1.0
-pytz==2017.2
+pyflakes==3.1.0
+PyJWT==2.8.0
+pyparsing==3.1.1
+PySocks==1.7.1
+python3-openid==3.2.0
+pytz==2023.3
 requests==2.31.0
 requests-oauthlib==1.3.1
-six==1.10.0
-social-auth-app-django==3.1.0
-social-auth-core==3.3.0
+six==1.16.0
+social-auth-app-django==5.2.0
+social-auth-core==4.4.2
+sqlparse==0.4.4
 tweepy==4.14.0
-Unidecode==1.3.2
-urllib3==1.24.3
+typing_extensions==4.7.1
+Unidecode==1.3.6
+urllib3==2.0.4
 zipp==3.16.2
