--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 # Install required python packages using pip:
 # pip install -r requirements.txt
-appdirs==1.4.4
 asgiref==3.7.2
+backports.zoneinfo==0.2.1
 certifi==2023.7.22
 cffi==1.15.1
-chardet==5.2.0
 charset-normalizer==3.2.0
 cryptography==41.0.3
 defusedxml==0.7.1
@@ -13,23 +12,15 @@ idna==3.4
 importlib-metadata==6.8.0
 Markdown==3.4.4
 oauthlib==3.2.2
-packaging==23.1
-pep8==1.7.1
 pycparser==2.21
-pyflakes==3.1.0
 PyJWT==2.8.0
-pyparsing==3.1.1
-PySocks==1.7.1
 python3-openid==3.2.0
-pytz==2023.3
 requests==2.31.0
 requests-oauthlib==1.3.1
-six==1.16.0
-social-auth-app-django==5.2.0
+social-auth-app-django==5.3.0
 social-auth-core==4.4.2
 sqlparse==0.4.4
 tweepy==4.14.0
 typing_extensions==4.7.1
-Unidecode==1.3.6
 urllib3==2.0.4
 zipp==3.16.2
