--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Install required python packages using pip:
 # pip install -r requirements.txt
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
