--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,5 @@
-# Install required python packages using pip:
-# pip install -r requirements.txt
-asgiref==3.7.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-cryptography==41.0.4
-defusedxml==0.7.1
-Django==4.2.5
-idna==3.4
-importlib-metadata==6.8.0
-Markdown==3.4.4
-oauthlib==3.2.2
-pycparser==2.21
-PyJWT==2.8.0
-python3-openid==3.2.0
-requests==2.31.0
-requests-oauthlib==1.3.1
-social-auth-app-django==5.3.0
-social-auth-core==4.4.2
-sqlparse==0.4.4
-tweepy==4.14.0
-typing_extensions==4.7.1
-urllib3==2.0.4
-zipp==3.16.2
+backports.zoneinfo;python_version<"3.9"
+Django
+Markdown
+social-auth-app-django
+tweepy
