--- a/bashoneliners/local_settings.py.sample
+++ b/bashoneliners/local_settings.py.sample
@@ -39,6 +39,7 @@ AUTHENTICATION_BACKENDS = ['django.contrib.auth.backends.ModelBackend']
 
 FLAGS = {
     'DEPLOYMENT_LINKS': [{'condition': 'boolean', 'value': True}],
+    'LOGIN': [{'condition': 'boolean', 'value': True}],
 }
 
 # 1. Login to Twitter
