Flag guard search

--- a/bashoneliners/local_settings.py.sample
+++ b/bashoneliners/local_settings.py.sample
@@ -41,6 +41,7 @@ FLAGS = {
     'DEPLOYMENT_LINKS': [{'condition': 'boolean', 'value': True}],
     'LOGIN': [{'condition': 'boolean', 'value': True}],
     'ONELINERS_TABS': [{'condition': 'boolean', 'value': True}],
+    'SEARCH': [{'condition': 'boolean', 'value': True}],
 }
 
 # 1. Login to Twitter
