Flag guard categories and commands filters

--- a/bashoneliners/local_settings.py.sample
+++ b/bashoneliners/local_settings.py.sample
@@ -42,6 +42,8 @@ FLAGS = {
     'LOGIN': [{'condition': 'boolean', 'value': True}],
     'ONELINERS_TABS': [{'condition': 'boolean', 'value': True}],
     'SEARCH': [{'condition': 'boolean', 'value': True}],
+    'CATEGORIES_FILTER': [{'condition': 'boolean', 'value': True}],
+    'COMMANDS_FILTER': [{'condition': 'boolean', 'value': True}],
 }
 
 # 1. Login to Twitter
