--- a/bashoneliners/local_settings.py.sample
+++ b/bashoneliners/local_settings.py.sample
@@ -44,6 +44,7 @@ FLAGS = {
     'SEARCH': [{'condition': 'boolean', 'value': True}],
     'CATEGORIES_FILTER': [{'condition': 'boolean', 'value': True}],
     'COMMANDS_FILTER': [{'condition': 'boolean', 'value': True}],
+    'PAGINATION': [{'condition': 'boolean', 'value': True}],
 }
 
 # 1. Login to Twitter
