--- a/bashoneliners/local_settings.py.sample
+++ b/bashoneliners/local_settings.py.sample
@@ -46,6 +46,7 @@ FLAGS = {
     'CATEGORIES_FILTER': [{'condition': 'boolean', 'value': True}],
     'COMMANDS_FILTER': [{'condition': 'boolean', 'value': True}],
     'PAGINATION': [{'condition': 'boolean', 'value': True}],
+    'VOTING': [{'condition': 'boolean', 'value': True}],
 }
 
 # 1. Login to Twitter
