--- a/bashoneliners/local_settings.py.sample
+++ b/bashoneliners/local_settings.py.sample
@@ -47,6 +47,7 @@ FLAGS = {
     'COMMANDS_FILTER': [{'condition': 'boolean', 'value': True}],
     'PAGINATION': [{'condition': 'boolean', 'value': True}],
     'VOTING': [{'condition': 'boolean', 'value': True}],
+    'DJANGO_SITE': [{'condition': 'boolean', 'value': True}],
 }
 
 # 1. Login to Twitter
